<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResFragment">

    <TextView
        android:id="@+id/resDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Datetime"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/resCourt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resCourt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Court"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resDatetime" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/remindButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resCourt" />

    <Button
        android:id="@+id/remindButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/remind"
        app:layout_constraintBottom_toTopOf="@+id/doorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/remindMinutes"
        app:layout_constraintTop_toBottomOf="@+id/cancelButton" />

    <Button
        android:id="@+id/doorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openDoor"
        app:layout_constraintBottom_toTopOf="@+id/payButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remindButton" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payButton" />

    <ImageButton
        android:id="@+id/payButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/payMB"
        android:src="@drawable/mobilepay_button"
        app:layout_constraintBottom_toTopOf="@+id/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doorButton" />

    <EditText
        android:id="@+id/remindMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/remind_mins"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="@+id/remindButton"
        app:layout_constraintEnd_toStartOf="@+id/remindButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/remindButton" />

</androidx.constraintlayout.widget.ConstraintLayout>