<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/NewResButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/createRes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/NewResButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--<menu xmlns:android="http://schemas.android.com/apk/res/android" >
            <item
                android:id="@+id/menu_refresh"
                android:showAsAction="never"
                android:title="@string/menu_refresh"/>
        </menu>-->

        <ListView
            android:id="@+id/resList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/NewResButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/listEmptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list" />

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/returnButtonNewRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/returnButtonNewRes"
        app:layout_constraintEnd_toEndOf="@+id/returnButtonNewRes"
        app:layout_constraintStart_toEndOf="@+id/textViewLoggenInAs" />

    <TextView
        android:id="@+id/textViewLoggenInAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in_as"
        app:layout_constraintBottom_toTopOf="@+id/returnButtonNewRes"
        app:layout_constraintEnd_toStartOf="@+id/textViewUsername"
        app:layout_constraintStart_toStartOf="@+id/returnButtonNewRes" />

</androidx.constraintlayout.widget.ConstraintLayout>